tests/valid/definite/ConstrainedSet_Valid_4.whiley
define pintset as {int} where |$| > 1

void System::main([string] args):
    pintset p
    p = {1,2}
    print str(p)
