tests/invalid/simple/Subtype_CompileFail_1.whiley
define int where $ >= 0 as scf1nat

void System::main([string] args):
    scf1nat x
    x = -1
    print str(x)
